fix navbar on mobile;

--- a/src/style/nav.less
+++ b/src/style/nav.less
@@ -21,11 +21,14 @@
 			position: absolute;
 			right: 0;
 			width: 100%;
+			height: 100%;
 			top: 65px;
 			list-style: none;
 			padding: 0;
 			margin: 0;
 			background-color: white;
+			display: none;
+			z-index: 1000;
 			&-Item {
 				display: none;
 				position: relative;
@@ -70,6 +73,8 @@
 			&-List {
 				position: relative;
 				top: 0;
+				height: auto;
+				display: block;
 				li {
 					display: inline-block;
 				}
